force-app/main/default/objects/Seat_Lot_Assignment__c/fields/BEAT_Donor__c.field-meta.xml
<CustomField>
    <fullName>BEAT_Donor__c</fullName>
    <formula>Ticket_Request__r.Constituent__r.ucinn_ascendv2__First_and_Last_Name_Formula__c</formula>
    <label>BEAT Donor</label>
    <type>Text</type>
</CustomField>