force-app/main/default/objects/Seat_Lot_Assignment__c/fields/Seat__c.field-meta.xml
<CustomField>
    <fullName>Seat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seat</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Seat_Lot__c.Event_Lookup__c</field>
            <operation>equals</operation>
            <valueField>$Source.Event__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Seat_Lot__c</referenceTo>
    <relationshipLabel>Seat Assignments</relationshipLabel>
    <relationshipName>Seat_Assignments1</relationshipName>
    <type>Lookup</type>
</CustomField>