force-app/main/default/objects/Seat_Lot_Assignment__c/fields/Seat_Lot_Price__c.field-meta.xml
<CustomField>
    <fullName>Seat_Lot_Price__c</fullName>
    <formula>Seat__r.Price__c</formula>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>