force-app/main/default/objects/Seat_Lot_Assignment__c/fields/Ticket_Request__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Request__c</fullName>
    <label>Ticket Request</label>
    <referenceTo>Ticket_Request__c</referenceTo>
    <relationshipLabel>Seat Assignments</relationshipLabel>
    <relationshipName>Seat_Lot_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>